Refactor EdenMount to use proper absolute and relative paths
Summary:
Instead of just `Path`.

To make it clear which paths are which.

Reviewed By: xavierd

fbshipit-source-id: 18b6c26eafaaea6fb74dbeb3f74a53a0ec9d0433